# Element-App

./: .gitignore  Cargo.toml  README.md
Element-App-Backend/: Cargo.toml
Element-App-Backend/src/: main.rs
Element-App-Backend/src/logs/: api.rs  auth.rs  db.rs  errors.rs  logging.rs  usermanagement.rs
Element-App-Backend/src/models/: mod.rs  models.rs  schema.rs  trend_analysis.rs  visualisation.rs
Element-App-Backend/src/stores/: financial_goal_store.rs  income_source_store.rs
Element-App-Backend/src/tests/: tests.rs
Element-App-Frontend/: README.md  package-lock.json
Element-App-Frontend/public/: index.html
Element-App-Frontend/src/: App.js
Element-App-Frontend/src/components/assets/data/: dummydata.js
Element-App-Frontend/src/components/common/: BlogSinglePage.jsx  Footer.jsx  Header.jsx
Element-App-Frontend/src/pages/: About.jsx  Blog.jsx  Home.jsx  Learn.jsx  Services.jsx
src/logs/: api.rs  auth.rs  logging.rs
src/models/: budget.rs  expense.rs  freelancer_service.rs  income.rs  projects.rs  transactions.rs  utils.rs
src/stores/: expense_source_store.rs  financial_goals.rs  in_memory_store.rs
