[package]
name = "element_escrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "1.4.7"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
validator = "0.12.0"
log = "0.4.14"
argon2 = { version = "0.6.0-pre.0" }
actix-web = "3.3.2"
serde_json = "1.0"
argonautica = "0.2.0"
num-traits = "0.2.14"
sanitize = "0.1.0"
rand = "0.8.4"
plotters = "0.3.5"
yeslogic-fontconfig-sys = "3.0.0"
[build]
features = ["default", "diesel"]  # Enable the "diesel" feature
